added swagger methods

--- a/src/app/burgers/burgers.component.html
+++ b/src/app/burgers/burgers.component.html
@@ -1,1 +1,6 @@
-{{burger}}
+<h2>Liste des burgers</h2>
+<ul class="burgers">
+  <li *ngFor="let burger of burgers">
+    <span class="badge">{{burger.id}}</span> {{burger.name}}
+  </li>
+</ul>
